link to medium post

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Released under the MIT license
       <li>Analytic ambient occlusion</li>
       <li>Heightfield water simulation *</li>
       <li>Soft shadows</li>
-      <li>Caustics **</li>
+      <li>Caustics (see <a href="https://medium.com/@evanwallace/rendering-realtime-caustics-in-webgl-2a99a29a0b2c">this</a> for details) **</li>
     </ul>
     <p><small>* requires the OES_texture_float extension<br>** requires the OES_standard_derivatives extension</small></p>
     <p><small>Tile texture from <a href="http://www.flickr.com/photos/zooboing/3682834083/">zooboing</a> on Flickr</small></p>
