--- a/index.html
+++ b/index.html
@@ -34,34 +34,5 @@ Released under the MIT license
   </style>
 </head><body>
   <div id="loading">Loading...</div>
-  <div id="help">
-    <h1>WebGL Water</h1>
-    <p>Made by <a href="http://madebyevan.com/">Evan Wallace</a></p>
-    <p>This demo requires a decent graphics card and up-to-date drivers. If you can't run the demo, you can still <a href="http://youtube.com/watch?v=R0O_9bp3EKQ">see it on YouTube</a>.</p>
-    <h2>Interactions:</h2>
-    <ul>
-      <li>Draw on the water to make ripples</li>
-      <li>Drag the background to rotate the camera</li>
-      <li>Press SPACEBAR to pause and unpause</li>
-      <li>Drag the sphere to move it around</li>
-      <li>Press the L key to set the light direction</li>
-      <li>Press the G key to toggle gravity</li>
-    </ul>
-    <h2>Features:</h2>
-    <ul>
-      <li>Raytraced reflections and refractions</li>
-      <li>Analytic ambient occlusion</li>
-      <li>Heightfield water simulation *</li>
-      <li>Soft shadows</li>
-      <li>Caustics (see <a href="https://medium.com/@evanwallace/rendering-realtime-caustics-in-webgl-2a99a29a0b2c">this</a> for details) **</li>
-    </ul>
-    <p><small>* requires the OES_texture_float extension<br>** requires the OES_standard_derivatives extension</small></p>
-    <p><small>Tile texture from <a href="http://www.flickr.com/photos/zooboing/3682834083/">zooboing</a> on Flickr</small></p>
-  </div>
-  <img id="tiles" src="tiles.jpg">
-  <img id="xneg" src="xneg.jpg">
-  <img id="xpos" src="xpos.jpg">
-  <img id="ypos" src="ypos.jpg">
-  <img id="zneg" src="zneg.jpg">
-  <img id="zpos" src="zpos.jpg">
+  <div id="help"></div>
 </body></html>
