--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Released under the MIT license
 
 <!DOCTYPE html>
 <html><head>
-  <title>WebGL Water</title>
+  <title>WebGL Water22222</title>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <script src="OES_texture_float_linear-polyfill.js"></script>
   <script src="lightgl.js"></script>
